--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,19 @@
   margin: 0;
   padding: 0;
 }
+
+header {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.canvas {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+#grid {
+  background-color: #f9f9f9;
+  border: 1px solid black;
+}
