--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,7 @@ header {
 }
 
 #grid {
-  background-color: #f9f9f9;
-  border: 1px solid black;
+  // background-color: #f9f9f9;
+  border: 3px solid black;
+  border-radius: 1rem;
 }
